--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,17 @@
 
 # Java / Maven
 backend/target/
+backend/.gradle/
+backend/build/
 .gradle-local/
 *.log
 
 # Node / Vite
 frontend/node_modules/
 frontend/dist/
+frontend/*.tsbuildinfo
+frontend/vite.config.js
+frontend/vite.config.d.ts
 
 # Env
 .env
